--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<br>
 				<h2>Wins: <span id="wins"></span></h2>
 				<br>
-				<h2>Hint: In a Galaxy far, far away... Just kidding, you shouldn't need a hint.</h2>
+				<h2>Hint: In a Galaxy far, far away... Just kidding, you shouldn't need a hint. But if you do need a hint, "-" can be used as a space.</h2>
 			</div>
 			<div class="col-6">
 				<br>
